--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "watch-tests": "tsc -p . -w --outDir out",
     "pretest": "npm run compile-tests && npm run compile && npm run lint",
     "check-types": "tsc --noEmit",
-    "lint": "eslint src --ext ts",
+    "lint": "eslint src --ext mts",
     "test": "vscode-test"
   },
   "devDependencies": {
